--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.keras filter=lfs diff=lfs merge=lfs -text
+variables.data-* filter=lfs diff=lfs merge=lfs -text
 models/export/food101_savedmodel/variables/variables.data-* filter=lfs diff=lfs merge=lfs -text
